--- a/www/css/style.css
+++ b/www/css/style.css
@@ -648,7 +648,7 @@ main {
 #portfolio {
   width: 50%;
   float: left;
-  transition: opacity 0.2s; }
+  transition: opacity 0.2s 0s, visibility 0s 0s; }
 
 #portfolio-container {
   position: relative; }
@@ -661,9 +661,15 @@ main {
     -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.3, 0, 0.4, 1);
     transition: transform 0.2s cubic-bezier(0.3, 0, 0.4, 1); }
   #portfolio-container[data-page="1"] #portfolio {
-    opacity: 0; }
+    -webkit-transition-duration: 0.2s, 0.2s;
+    transition-duration: 0.2s, 0.2s;
+    opacity: 0;
+    visibility: hidden; }
   #portfolio-container[data-page="2"] #portfolio-overview {
-    opacity: 0; }
+    -webkit-transition-duration: 0.2s, 0.2s;
+    transition-duration: 0.2s, 0.2s;
+    opacity: 0;
+    visibility: hidden; }
   #portfolio-container[data-page="2"] #portfolio-wrap {
     left: -100%; }
 
